Rewrite README with practical quick-reference sections
Covers: launch commands, tmux, auth persistence, op, password,
whitelist, world transfer gotchas, multiple worlds, networking.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>